test/types/tuple/errors/tuple-init.future
bug: Internal error from declaring a secondary initializer on a tuple type
#15718
