test/types/tuple/errors/tuple-init.good
tuple-init.chpl:1: error: cannot define initializer for tuple type
